--- a/modules/account_payment_cog/locale/fr_FR.po
+++ b/modules/account_payment_cog/locale/fr_FR.po
@@ -2,13 +2,23 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:account.payment.creation:"
-msgid "No Batch Path Specified"
-msgstr "Le chemin d'exécution des batchs n'est pas configuré"
+msgctxt "error:account.payment.journal:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
 
-msgctxt "error:account.payment.treatment:"
-msgid "No Batch Path Specified"
-msgstr "Le chemin d'exécution des batchs n'est pas configuré"
+msgctxt "error:account.payment.journal:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
 
 msgctxt "error:party.synthesis.menu.payment:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
@@ -43,6 +53,10 @@ msgstr "ID"
 msgctxt "field:account.payment.journal,sepa_bank_account_number:"
 msgid "Bank Account"
 msgstr "Compte Bancaire"
+
+msgctxt "field:account.payment.journal,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:account.payment.payment_information_selection,id:"
 msgid "ID"
@@ -114,7 +128,7 @@ msgstr "Batch de traitement des paiements"
 
 msgctxt "model:ir.action,name:"
 msgid "Receivable Payments"
-msgstr ""
+msgstr "Paiements à recevoir"
 
 msgctxt "model:ir.action,name:modify_payment_information_wizard"
 msgid "Modify Payment Information"
@@ -138,7 +152,7 @@ msgstr "Modification de la date de prélèvement"
 
 msgctxt "view:contract:"
 msgid "As of today"
-msgstr ""
+msgstr "A aujourd'hui"
 
 msgctxt ""
 "wizard_button:account.payment.payment_information_modification,payment_information_selection,end:"
