--- a/modules/contract_insurance_invoice/locale/fr_FR.po
+++ b/modules/contract_insurance_invoice/locale/fr_FR.po
@@ -74,13 +74,13 @@ msgstr ""
 "partagent la même clé fonctionnelle :\n"
 "\"%s\"."
 
-msgctxt "error:account.payment.creation:"
-msgid "No Batch Path Specified"
-msgstr "Le chemin d'exécution des batchs n'est pas configuré"
-
-msgctxt "error:account.payment.treatment:"
-msgid "No Batch Path Specified"
-msgstr "Le chemin d'exécution des batchs n'est pas configuré"
+msgctxt "error:account.invoice:"
+msgid ""
+"Impossible to post invoice %(invoice)s on contract %(contract)s which is "
+"%(status)s"
+msgstr ""
+"Impossible d'émettre la quittance %(invoice)s du contrat %(contrat)s qui est"
+" au statut %(status)s"
 
 msgctxt "error:account.tax.description:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
@@ -117,14 +117,6 @@ msgstr ""
 "%s\n"
 "partagent la même clé fonctionnelle :\n"
 "\"%s\"."
-
-msgctxt "error:contract.invoice.create:"
-msgid "No Batch Path Specified"
-msgstr "Le chemin d'exécution des batchs n'est pas configuré"
-
-msgctxt "error:contract.invoice.post:"
-msgid "No Batch Path Specified"
-msgstr "Le chemin d'exécution des batchs n'est pas configuré"
 
 msgctxt "error:contract.premium.display:"
 msgid "No contract found in context"
@@ -1020,7 +1012,7 @@ msgstr "Prime"
 
 msgctxt "model:contract.premium-account.tax,name:"
 msgid "Premium - Tax"
-msgstr ""
+msgstr "Relation Prime - Taxe"
 
 msgctxt "model:contract.premium.display.premiums,name:"
 msgid "Display Contract Premium Displayer"
@@ -1313,7 +1305,7 @@ msgstr "Primes"
 
 msgctxt "view:contract.premium.display.premiums:"
 msgid "Contract Premiums"
-msgstr ""
+msgstr "Primes du contrat"
 
 msgctxt "view:contract.premium:"
 msgid "Premium"
@@ -1354,7 +1346,3 @@ msgstr "Ok"
 msgctxt "wizard_button:contract.premium.display,display,end:"
 msgid "Exit"
 msgstr "Sortir"
-
-msgctxt "model:contract.invoice.post,name:"
-msgid "Post Contract Invoice Batch"
-msgstr "Batch d'émission des quittances"
