--- a/modules/offered_insurance/locale/fr_FR.po
+++ b/modules/offered_insurance/locale/fr_FR.po
@@ -510,10 +510,6 @@ msgctxt "error:offered.term.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
-msgctxt "error:offered.validate.batch:"
-msgid "No Batch Path Specified"
-msgstr "Le chemin d'exécution des batchs n'est pas configuré"
-
 msgctxt "error:party.party:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
 msgstr ""
@@ -2578,7 +2574,7 @@ msgstr "Créé par"
 
 msgctxt "field:rule_engine-extra_data,extra_data:"
 msgid "External Data"
-msgstr ""
+msgstr "Donnée externe"
 
 msgctxt "field:rule_engine-extra_data,id:"
 msgid "ID"
@@ -2642,7 +2638,7 @@ msgstr "Prévisualisation du document"
 
 msgctxt "model:document.create.preview.report,name:"
 msgid "Document Create Preview Report"
-msgstr ""
+msgstr "Rapport de prévisualisation du document"
 
 msgctxt "model:document.create.select,name:"
 msgid "Document Create Select"
@@ -2718,7 +2714,7 @@ msgstr "Document à partir d'un fichier"
 
 msgctxt "model:ir.action,name:letter_generation_report"
 msgid "Letter Report"
-msgstr ""
+msgstr "Rapport de courrier"
 
 msgctxt "model:ir.action,name:letter_generation_wizard"
 msgid "Impression du Courrier"
@@ -2798,7 +2794,7 @@ msgstr "Relation Risque - Données Complémentaires"
 
 msgctxt "model:offered.item.description-sub_item.description,name:"
 msgid "Relation between Item Desc and Sub Item Desc"
-msgstr ""
+msgstr "Relation entre descripteur de risque et sous descripteur de risque"
 
 msgctxt "model:offered.option.description,name:"
 msgid "OptionDescription"
@@ -2830,7 +2826,7 @@ msgstr "Règle de Terme - Renouvellement"
 
 msgctxt "model:offered.validate.batch,name:"
 msgid "Product Validation Batch"
-msgstr ""
+msgstr "Batch de validation produit"
 
 msgctxt "model:process-offered.product,name:"
 msgid "Process Product Relation"
@@ -2838,7 +2834,7 @@ msgstr "Relation Processus Produit"
 
 msgctxt "model:rule_engine-extra_data,name:"
 msgid "Rule Engine - Extra Data"
-msgstr ""
+msgstr "Relation Moteur de Règle - Données Complémentaire"
 
 msgctxt "model:rule_engine.rule_parameter,selection:None"
 msgid ""
@@ -2938,7 +2934,9 @@ msgctxt "model:rule_engine.rule_parameter,selection:None"
 msgid ""
 "real : Real\n"
 "at_given_day_of_year : At Given Day of Year"
-msgstr "real: Réel"
+msgstr ""
+"real : Réel\n"
+"at_given_day_of_year : A un jour donné"
 
 msgctxt "model:rule_engine.rule_parameter,selection:given_day"
 msgid ""
@@ -2974,6 +2972,37 @@ msgid ""
 "30 : 30\n"
 "31 : 31"
 msgstr ""
+"1 : 1\n"
+"2 : 2\n"
+"3 : 3\n"
+"4 : 4\n"
+"5 : 5\n"
+"6 : 6\n"
+"7 : 7\n"
+"8 : 8\n"
+"9 : 9\n"
+"10 : 10\n"
+"11 : 11\n"
+"12 : 12\n"
+"13 : 13\n"
+"14 : 14\n"
+"15 : 15\n"
+"16 : 16\n"
+"17 : 17\n"
+"18 : 18\n"
+"19 : 19\n"
+"20 : 20\n"
+"21 : 21\n"
+"22 : 22\n"
+"23 : 23\n"
+"24 : 24\n"
+"25 : 25\n"
+"26 : 26\n"
+"27 : 27\n"
+"28 : 28\n"
+"29 : 29\n"
+"30 : 30\n"
+"31 : 31"
 
 msgctxt "model:rule_engine.rule_parameter,selection:given_month"
 msgid ""
@@ -2990,6 +3019,18 @@ msgid ""
 "11 : 11\n"
 "12 : 12"
 msgstr ""
+"1 : 1\n"
+"2 : 2\n"
+"3 : 3\n"
+"4 : 4\n"
+"5 : 5\n"
+"6 : 6\n"
+"7 : 7\n"
+"8 : 8\n"
+"9 : 9\n"
+"10 : 10\n"
+"11 : 11\n"
+"12 : 12"
 
 msgctxt "model:rule_engine.rule_parameter,selection:option_age_kind"
 msgid ""
