--- a/modules/contract_insurance/locale/fr_FR.po
+++ b/modules/contract_insurance/locale/fr_FR.po
@@ -138,6 +138,8 @@ msgid ""
 "Cannot add functional key : both quotenumber and contract_number are missing"
 " from values"
 msgstr ""
+"Impossible d'ajouter la clé fonctionnelle : numéro de devis et de contrat "
+"absents des valeurs"
 
 msgctxt "error:contract:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
@@ -156,6 +158,10 @@ msgstr ""
 "%s\n"
 "partagent la même clé fonctionnelle :\n"
 "\"%s\"."
+
+msgctxt "error:contract:"
+msgid "Errors occurs during renewal date calculation : %s"
+msgstr ""
 
 msgctxt "error:contract:"
 msgid "Invalid file format"
@@ -245,7 +251,7 @@ msgstr "Description des risques possibles"
 
 msgctxt "field:contract,rec_name:"
 msgid "Name"
-msgstr "Nom"
+msgstr "Numéro"
 
 msgctxt "field:contract,start_date:"
 msgid "Effective Date"
@@ -1023,10 +1029,6 @@ msgstr "Gérer les Options"
 msgctxt "model:ir.action,name:act_contract_activation_history_relate_form"
 msgid "Activation History"
 msgstr "Historique d'activation"
-
-msgctxt "model:ir.action,name:act_contract_relate_form"
-msgid "Contracts"
-msgstr "Contrats"
 
 msgctxt "model:ir.action,name:act_create_extra_premium"
 msgid "Create Extra Premium"
