--- a/modules/country_cog/locale/fr_FR.po
+++ b/modules/country_cog/locale/fr_FR.po
@@ -86,23 +86,23 @@ msgstr "Creation date"
 
 msgctxt "field:country.zipcode,create_uid:"
 msgid "Create User"
-msgstr " "
+msgstr "Créé par"
 
 msgctxt "field:country.zipcode,id:"
 msgid "ID"
-msgstr " "
+msgstr "ID"
 
 msgctxt "field:country.zipcode,rec_name:"
 msgid "Name"
-msgstr " "
+msgstr "Nom "
 
 msgctxt "field:country.zipcode,write_date:"
 msgid "Write Date"
-msgstr " "
+msgstr " Date d'écriture"
 
 msgctxt "field:country.zipcode,write_uid:"
 msgid "Write User"
-msgstr " "
+msgstr "Mis à jour par"
 
 msgctxt "field:country.zipcode,xml_id:"
 msgid "XML Id"
@@ -122,7 +122,7 @@ msgstr "Code postal principal"
 
 msgctxt "model:country.zipcode,name:"
 msgid "ZipCode"
-msgstr " "
+msgstr "Code Postal"
 
 msgctxt "model:ir.action,name:act_zipcode_form"
 msgid "ZipCode"
