--- a/modules/table/locale/fr_FR.po
+++ b/modules/table/locale/fr_FR.po
@@ -116,7 +116,7 @@ msgstr "Créé par"
 
 msgctxt "field:table,dimension10:"
 msgid "Dimension 10"
-msgstr ""
+msgstr "Dimension 10"
 
 msgctxt "field:table,dimension1:"
 msgid "Dimension 1"
@@ -136,27 +136,27 @@ msgstr "Dimension 4"
 
 msgctxt "field:table,dimension5:"
 msgid "Dimension 5"
-msgstr ""
+msgstr "Dimension 5"
 
 msgctxt "field:table,dimension6:"
 msgid "Dimension 6"
-msgstr ""
+msgstr "Dimension 6"
 
 msgctxt "field:table,dimension7:"
 msgid "Dimension 7"
-msgstr ""
+msgstr "Dimension 7"
 
 msgctxt "field:table,dimension8:"
 msgid "Dimension 8"
-msgstr ""
+msgstr "Dimension 8"
 
 msgctxt "field:table,dimension9:"
 msgid "Dimension 9"
-msgstr ""
+msgstr "Dimension 9"
 
 msgctxt "field:table,dimension_kind10:"
 msgid "Dimension Kind 10"
-msgstr ""
+msgstr "Type de la dimension 10"
 
 msgctxt "field:table,dimension_kind1:"
 msgid "Dimension Kind 1"
@@ -176,23 +176,23 @@ msgstr "Type Dim 4"
 
 msgctxt "field:table,dimension_kind5:"
 msgid "Dimension Kind 5"
-msgstr ""
+msgstr "Type de la dimension 5"
 
 msgctxt "field:table,dimension_kind6:"
 msgid "Dimension Kind 6"
-msgstr ""
+msgstr "Type de champ 6"
 
 msgctxt "field:table,dimension_kind7:"
 msgid "Dimension Kind 7"
-msgstr ""
+msgstr "Type de la dimension 7"
 
 msgctxt "field:table,dimension_kind8:"
 msgid "Dimension Kind 8"
-msgstr ""
+msgstr "Type de la dimension 8"
 
 msgctxt "field:table,dimension_kind9:"
 msgid "Dimension Kind 9"
-msgstr ""
+msgstr "Type de la dimension 9"
 
 msgctxt "field:table,dimension_name10:"
 msgid "Name"
@@ -236,7 +236,7 @@ msgstr "Nom"
 
 msgctxt "field:table,dimension_order10:"
 msgid "Dimension Order 10"
-msgstr ""
+msgstr "Ordre de la dimension 10"
 
 msgctxt "field:table,dimension_order1:"
 msgid "Dimension Order 1"
@@ -256,23 +256,23 @@ msgstr "Ordre Dimension 4"
 
 msgctxt "field:table,dimension_order5:"
 msgid "Dimension Order 5"
-msgstr ""
+msgstr "Ordre de la dimension 5"
 
 msgctxt "field:table,dimension_order6:"
 msgid "Dimension Order 6"
-msgstr ""
+msgstr "Ordre de la dimension 6"
 
 msgctxt "field:table,dimension_order7:"
 msgid "Dimension Order 7"
-msgstr ""
+msgstr "Ordre de la dimension 7"
 
 msgctxt "field:table,dimension_order8:"
 msgid "Dimension Order 8"
-msgstr ""
+msgstr "Ordre de la dimension 8"
 
 msgctxt "field:table,dimension_order9:"
 msgid "Dimension Order 9"
-msgstr ""
+msgstr "Ordre de la dimension 9"
 
 msgctxt "field:table,id:"
 msgid "ID"
@@ -364,7 +364,7 @@ msgstr "Définition"
 
 msgctxt "field:table.2d.open.ask_dimensions,dimension10:"
 msgid "Dimension 10"
-msgstr ""
+msgstr "Dimension 10"
 
 msgctxt "field:table.2d.open.ask_dimensions,dimension10_required:"
 msgid "Dimension %s Required"
@@ -388,7 +388,7 @@ msgstr "Dimension %s requise"
 
 msgctxt "field:table.2d.open.ask_dimensions,dimension5:"
 msgid "Dimension 5"
-msgstr ""
+msgstr "Dimension 5"
 
 msgctxt "field:table.2d.open.ask_dimensions,dimension5_required:"
 msgid "Dimension %s Required"
@@ -396,7 +396,7 @@ msgstr "Dimension %s requise"
 
 msgctxt "field:table.2d.open.ask_dimensions,dimension6:"
 msgid "Dimension 6"
-msgstr ""
+msgstr "Dimension 6"
 
 msgctxt "field:table.2d.open.ask_dimensions,dimension6_required:"
 msgid "Dimension %s Required"
@@ -404,7 +404,7 @@ msgstr "Dimension %s requise"
 
 msgctxt "field:table.2d.open.ask_dimensions,dimension7:"
 msgid "Dimension 7"
-msgstr ""
+msgstr "Dimension 7"
 
 msgctxt "field:table.2d.open.ask_dimensions,dimension7_required:"
 msgid "Dimension %s Required"
@@ -412,7 +412,7 @@ msgstr "Dimension %s requise"
 
 msgctxt "field:table.2d.open.ask_dimensions,dimension8:"
 msgid "Dimension 8"
-msgstr ""
+msgstr "Dimension 8"
 
 msgctxt "field:table.2d.open.ask_dimensions,dimension8_required:"
 msgid "Dimension %s Required"
@@ -420,7 +420,7 @@ msgstr "Dimension %s requise"
 
 msgctxt "field:table.2d.open.ask_dimensions,dimension9:"
 msgid "Dimension 9"
-msgstr ""
+msgstr "Dimension 9"
 
 msgctxt "field:table.2d.open.ask_dimensions,dimension9_required:"
 msgid "Dimension %s Required"
@@ -448,7 +448,7 @@ msgstr "Définition"
 
 msgctxt "field:table.cell,dimension10:"
 msgid "Dimension 10"
-msgstr ""
+msgstr "Dimension 10"
 
 msgctxt "field:table.cell,dimension1:"
 msgid "Dimension 1"
@@ -468,23 +468,23 @@ msgstr "Dimension 4"
 
 msgctxt "field:table.cell,dimension5:"
 msgid "Dimension 5"
-msgstr ""
+msgstr "Dimension 5"
 
 msgctxt "field:table.cell,dimension6:"
 msgid "Dimension 6"
-msgstr ""
+msgstr "Dimension 6"
 
 msgctxt "field:table.cell,dimension7:"
 msgid "Dimension 7"
-msgstr ""
+msgstr "Dimension 7"
 
 msgctxt "field:table.cell,dimension8:"
 msgid "Dimension 8"
-msgstr ""
+msgstr "Dimension 8"
 
 msgctxt "field:table.cell,dimension9:"
 msgid "Dimension 9"
-msgstr ""
+msgstr "Dimension 9"
 
 msgctxt "field:table.cell,id:"
 msgid "ID"
@@ -632,11 +632,11 @@ msgstr "Cellules"
 
 msgctxt "model:ir.action,name:act_definition_dimension_form"
 msgid "Definition Dimension"
-msgstr ""
+msgstr "Valeurs des dimensions"
 
 msgctxt "model:ir.action,name:act_dimension_value_open"
 msgid "Definition Dimension"
-msgstr ""
+msgstr "Valeurs des dimensions"
 
 msgctxt "model:ir.action,name:act_table_2d_open"
 msgid "Table 2D"
@@ -1024,7 +1024,7 @@ msgstr "Dimension 1"
 
 msgctxt "selection:table.dimension.value,type:"
 msgid "Dimension 10"
-msgstr ""
+msgstr "Dimension 10"
 
 msgctxt "selection:table.dimension.value,type:"
 msgid "Dimension 2"
@@ -1040,23 +1040,23 @@ msgstr "Dimension 4"
 
 msgctxt "selection:table.dimension.value,type:"
 msgid "Dimension 5"
-msgstr ""
+msgstr "Dimension 5"
 
 msgctxt "selection:table.dimension.value,type:"
 msgid "Dimension 6"
-msgstr ""
+msgstr "Dimension 6"
 
 msgctxt "selection:table.dimension.value,type:"
 msgid "Dimension 7"
-msgstr ""
+msgstr "Dimension 7"
 
 msgctxt "selection:table.dimension.value,type:"
 msgid "Dimension 8"
-msgstr ""
+msgstr "Dimension 8"
 
 msgctxt "selection:table.dimension.value,type:"
 msgid "Dimension 9"
-msgstr ""
+msgstr "Dimension 9"
 
 msgctxt "view:table.2d.open.ask_dimensions:"
 msgid "Dimensions"
@@ -1068,7 +1068,7 @@ msgstr "Table"
 
 msgctxt "view:table.dimension.value.open.ask_type:"
 msgid "Definition Dimension"
-msgstr ""
+msgstr "Valeurs des dimensions"
 
 msgctxt "view:table.dimension.value:"
 msgid "Table Definition Dimension"
